--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
